change app name and add favicon

--- a/invoice-app/templates/index.html
+++ b/invoice-app/templates/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rechnungsverwaltung</title>
+    <title>Summa</title>
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='favicon.svg') }}" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,8 +20,8 @@
     <header class="header">
       <div class="header-content">
         <div class="logo">
-          <div class="logo-icon">📄</div>
-          <span>Rechnungen</span>
+          <div class="logo-icon">Σ</div>
+          <span>Summa</span>
         </div>
         <div class="header-actions">
           <button
