--- a/static/css/style.css
+++ b/static/css/style.css
@@ -799,7 +799,8 @@ body {
 .toast-container {
   position: fixed;
   bottom: 2rem;
-  right: 2rem;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 2000;
 }
 
@@ -827,11 +828,11 @@ body {
 @keyframes toastIn {
   from {
     opacity: 0;
-    transform: translateX(100%);
+    transform: translateY(1rem);
   }
   to {
     opacity: 1;
-    transform: translateX(0);
+    transform: translateY(0);
   }
 }
 
@@ -1290,8 +1291,7 @@ body {
 /* Toast Mobile */
 @media (max-width: 480px) {
   .toast-container {
-    left: 1rem;
-    right: 1rem;
+    width: calc(100% - 2rem);
     bottom: 1rem;
   }
 
